#1234 Typo error rectified

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="navbar__s2">
             <p>Discover</p>
-            <p>Trips</p>
+            <p>Trip</p>
             <p>Review</p>
             <p>More</p>
         </div>
